--- a/diseñoInterfaces/ejercicios/pom.xml
+++ b/diseñoInterfaces/ejercicios/pom.xml
@@ -19,6 +19,14 @@
   </properties>
 
   <dependencies>
+
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx</artifactId>
+      <version>18-ea+3</version>
+      <type>pom</type>
+    </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
