--- a/accesoDatos/ejercicios/pom.xml
+++ b/accesoDatos/ejercicios/pom.xml
@@ -4,11 +4,11 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>me.alejandrofan2.dam.serviciosprocesos</groupId>
-  <artifactId>tema2</artifactId>
+  <groupId>me.alejandrofan2.dam.accesodatos</groupId>
+  <artifactId>ejercicios</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>tema2</name>
+  <name>ejercicios</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -19,19 +19,18 @@
   </properties>
 
   <dependencies>
-
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-    
-              <dependency>
-                <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-simple</artifactId>
-                <version>1.7.28</version>
-            </dependency>
+  
+    <dependency>
+      <groupId>org.ops4j.pax.logging</groupId>
+      <artifactId>pax-logging-api</artifactId>
+      <version>1.11.0</version>
+    </dependency>
   </dependencies>
 
   <build>
